@startuml
skinparam classAttributeIconSize 0

class ClientMain {
  +start(Stage)
  +navigateToChat()
}

class ChatManager {
  -currentUser: User
  +connectAndAuth()
  +sendMessage()
  +requestCall()
  +handlePayload(NetworkPayload)
}

class NetworkClient {
  -socket: Socket
  +connect()
  +sendData(NetworkPayload)
  -listen()
}

class ChatView {
  +getView()
  -startMediaPresentation()
}

class NetworkPayload {
  -type: PayloadType
  -data: Object
  -status: String
}

class MessagingServer {
  -activeClients: Map
  +start()
  +routeMessage()
  +routeSignalingPayload()
}

class ClientHandler {
  -clientSocket: Socket
  +run()
  -handlePayload()
}

class UserDAO {
  +authenticate()
  +register()
  +addContactByPhone()
}

class MessageDAO {
  +saveMessage()
  +getUndeliveredMessages()
  +getChatHistory()
}

ClientMain "1" *-- "1" ChatManager
ChatView "1" o-- "1" ChatManager
ChatManager "1" *-- "1" NetworkClient
NetworkClient ..> NetworkPayload : sends/receives

MessagingServer "1" *-- "*" ClientHandler
ClientHandler ..> NetworkPayload : processes
ClientHandler ..> UserDAO : uses
ClientHandler ..> MessageDAO : uses

@enduml
